--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --background: #91a6db;
+  --background: #ede8f5;
   --foreground: #171717;
 }
 
@@ -22,22 +22,24 @@ body {
 
 /* Container for cards */
 .cards-container {
-  background-color: #ede8f5;
   border-radius: 15px;
-  width: 82%;
+  width: 83%;
+  height: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center; /* Centers elements horizontally */
-  align-items: center; /* Centers elements vertically */
   padding: 10px; /* Optional padding for spacing */
   text-align: center; /* Centers text inside the elements if necessary */
+  order: -1;
 }
+
 .nav-container {
   z-index: 3;
   background-color: blue;
   position: sticky;
   position: -webkit-sticky;
   top: 0px;
+  box-shadow: 0px 2px 0px rgba(52, 38, 202, 0.292);
 }
 .sidebar-container {
   width: 17%;
@@ -138,11 +140,12 @@ li {
   color: white;
 }
 .nav-bar-li:hover,
-.side-bar-li:hover {
+.side-bar-li:hover,
+.add-picture:hover {
   background-color: rgba(124, 115, 218, 0.533);
 }
 
-.add-clothes-container {
+.add-clothes-background {
   background-color: #17171784;
   width: 100%;
   height: 100vh;
@@ -151,17 +154,30 @@ li {
   top: 0px;
   z-index: 10;
 }
+#types {
+  background-color: red;
+}
+input {
+  width: 100%;
+  padding: 4px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 0px rgb(193, 193, 193);
+}
+.error {
+  font-size: medium;
+  background-color: rgba(251, 180, 180, 0.316);
+}
 
 .add-clothes-form {
   border-radius: 5px;
   width: 400px;
-  height: 400px;
+  height: auto;
   margin: 0 auto;
   padding: 15px; /* Optional padding for spacing */
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
-  margin: -200px 0 0 -200px;
+  margin: -300px 0 0 -200px;
   background-color: rgb(201, 201, 214);
   font-size: large;
   display: flex;
@@ -170,10 +186,44 @@ li {
 
 .add-picture {
   text-align: center;
+  height: 100%;
 }
+
 .image-container {
   background-color: #ffffff84;
   width: 200px;
   height: 200px;
   margin: 0px 0 0 90px;
+}
+
+.selected-colours-container {
+  padding: 4px;
+  gap: 2px;
+  display: flex;
+}
+
+.selected-colours {
+  text-align: center;
+  font-size: medium;
+  width: 60px;
+  padding: 4px;
+  border-radius: 40px;
+  background-color: #9a99b0;
+  border-color: #171717;
+  border-width: 1px;
+}
+
+.selected-colours:hover {
+  background-color: #abababb3;
+}
+.selected-colours:active {
+  font: bold;
+  background-color: #f9cbcbc7;
+  padding: 4px;
+}
+
+.colour-input-container {
+  height: 100%;
+  display: inline-flex;
+  align-items: center;
 }
