--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -192,8 +192,13 @@ input {
 .image-container {
   background-color: #ffffff84;
   width: 200px;
-  height: 200px;
+  height: 300px;
   margin: 0px 0 0 90px;
+}
+
+.display-preview {
+  width: 100%;
+  height: 100%;
 }
 
 .selected-colours-container {
