--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -20,13 +20,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+
 /* Container for cards */
 .cards-container {
   border-radius: 15px;
   width: 83%;
   height: 100%;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 200px);
   justify-content: center; /* Centers elements horizontally */
   padding: 10px; /* Optional padding for spacing */
   text-align: center; /* Centers text inside the elements if necessary */
@@ -42,6 +43,8 @@ body {
   box-shadow: 0px 2px 0px rgba(52, 38, 202, 0.292);
 }
 .sidebar-container {
+  min-width: 100px;
+  background-color: blue;
   width: 17%;
   float: left;
   top: 0px;
@@ -146,6 +149,7 @@ li {
 }
 
 .add-clothes-background {
+
   background-color: #17171784;
   width: 100%;
   height: 100vh;
@@ -153,6 +157,7 @@ li {
   position: -webkit-sticky;
   top: 0px;
   z-index: 10;
+
 }
 #types {
   background-color: red;
