--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -159,9 +159,23 @@ li {
   z-index: 10;
 
 }
-#types {
-  background-color: red;
+
+.dropdwn{
+  background-color: rgb(255, 255, 255);
+  align-items: center;
 }
+
+
+.dropdwn-content{
+  position: relative;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+
+}
+
+
+
+
 input {
   width: 100%;
   padding: 4px;
