--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --background: #ede8f5;
-  --foreground: #171717;
+  --foreground: #ede8f5;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,7 +19,6 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
-
 
 /* Container for cards */
 .cards-container {
@@ -150,7 +149,6 @@ li {
 }
 
 .add-clothes-background {
-
   background-color: #17171784;
   width: 100%;
   height: 100vh;
@@ -158,24 +156,18 @@ li {
   position: -webkit-sticky;
   top: 0px;
   z-index: 10;
-
 }
 
-.dropdwn{
+.dropdwn {
   background-color: rgb(255, 255, 255);
   align-items: center;
 }
 
-
-.dropdwn-content{
+.dropdwn-content {
   position: relative;
   background-color: #f9f9f9;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
-
-
-
 
 input {
   width: 100%;
