--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,14 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ede8f5;
-  --foreground: #ede8f5;
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: rgb(0, 0, 0);
+    --background: #ededed;
     --foreground: #ededed;
   }
 }
